# FFmpegWindowsBuild

./: .gitignore  README.md  build.ps1  copy-external-include.ps1
demo/ffmpeg-static-exe/: .gitignore  CMakeLists.txt  README.md  main.cpp
demo/ffmpeg-static-lib/: .gitignore  CMakeLists.txt  REAME.md
